fix transtation and switcher buttons

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -4,7 +4,7 @@
   },
   "hero": {
     "title": "Hello! My name is",
-    "description": "I do website design, Front-end and web application development"
+    "description": "I create user-friendly, stylish websites and develop modern web applications"
   },
   "projects": {
     "title": "Projects",
