--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -4,7 +4,7 @@
   },
   "hero": {
     "title": "Привет! Меня зовут",
-    "description": "Я занимаюсь веб-дизайном, фронтенд- и разработкой веб-приложений"
+    "description": "Я создаю удобные и стильные сайты, а также разрабатываю веб-приложения"
   },
   "projects": {
     "title": "Проекты",
