--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1,6 +1,7 @@
 {
   "common": {
-    "name": "Artem Petrovskyi"
+    "name": "Artem Petrovskyi",
+    "error": "Something went wrong. Please try again later."
   },
   "hero": {
     "title": "Hello! My name is",
