--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -1,6 +1,7 @@
 {
   "common": {
-    "name": "Артём Петровский"
+    "name": "Артём Петровский",
+    "error": "Что-то пошло не так. Пожалуйста, попробуйте позже."
   },
   "hero": {
     "title": "Привет! Меня зовут",
