add metatags and minor changes

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "pageTitle": "Artem Petrovskyi | Web developer",
     "name": "Artem Petrovskyi",
     "error": "Something went wrong. Please try again later."
   },
