--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "pageTitle": "Артём Петровский | Веб-разработчик",
     "name": "Артём Петровский",
     "error": "Что-то пошло не так. Пожалуйста, попробуйте позже."
   },
